--- a/source/package.json
+++ b/source/package.json
@@ -3,7 +3,7 @@
   "title": "Metabookmarks",
   "id": "jid1-BYj7uiAyhibCEg",
   "description": "Find bookmarks by tag and display them on a bookmarkable page",
-  "author": "Dan Farrow - dan@squarebracket.net",
+  "author": "Dan Farrow",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "0.0.1"
 }
